# dpps

./: CMakeLists.txt  README.md  build.sh  configure.h.in  documentation.hh  doxy.in  dpps.i  get_libraries.sh  process_data_inkscape.sh
Classes/: Pattern.cpp  Pattern.hh  Pattern_Fibonacci.cpp  Pattern_Fibonacci.hh  Pattern_Penrose_tiling.cpp  Pattern_Penrose_tiling.hh  Pattern_factory.cpp  Pattern_factory.hh  Pattern_grating.cpp  Pattern_grating.hh  Pattern_hard_sphere_random_packing.cpp  Pattern_hard_sphere_random_packing.hh  Pattern_random.cpp  Pattern_random.hh  Pattern_rectangular_lattice.cpp  Pattern_rectangular_lattice.hh  Pattern_text.cpp  Pattern_text.hh  Polyline.cpp  Polyline.hh  Polyline_factory.cpp  Polyline_factory.hh  Reader.cpp  Reader.hh  Reader_DXF_R12.cpp  Reader_DXF_R12.hh  Reader_image.cpp  Reader_image.hh  Reader_image_Qt.cpp  Reader_image_Qt.hh  Reader_image_png.cpp  Reader_image_png.hh  Reader_witec.cpp  Reader_witec.hh  Typeface.cpp  Typeface.hh  Vertex.cpp  Vertex.hh  Writer.cpp  Writer.hh  (+13 more)
Classes/old/: Pattern_text.cpp  Pattern_text.hh  Typeface.cpp  Typeface.hh  font_Vollkorn.hh  fonts_declarations.hh  fonts_declarations_.hh
cmake/: FindSWIG_cross.cmake
font_data/: Source-Code-Pro-composition.txt  Vollkorn-composition.txt
main/: command_line_order.hh  interpret_lua.cpp  interpret_lua.hh  main.cpp  preprocessor.cpp  preprocessor.hh
misc/: Toolchain_clang.cmake  Toolchain_gentoo_crossdev_mingw32.cmake  Toolchain_gentoo_crossdev_mingw64.cmake  test.cmake
util/: Matrix2x2.cpp  Matrix2x2.hh  Matrix3x3.cpp  Matrix3x3.hh  common.cpp  common.hh  util.cpp  util.hh
